# snapy

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: doc_requirements.txt  pyproject.toml  setup.py  test_requirements.txt
{{cookiecutter.project_slug}}/.github/workflows/: pub_docs.yml  pypi.yml  tests.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_version.py
